--- a/dictionary.html
+++ b/dictionary.html
@@ -17,6 +17,7 @@
       <div class="dic-container">
         
         <input type="text" id="word" placeholder="Search a word..." />
+        <button id="clear">Clear</button>
         <button id="translate">Translate</button>
 
         <input
